--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,7 +50,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./java/
+          file: ./java/Dockerfile
           tags: likesistemas/browser:latest
           build-args: |
             CERT_PASSWORD=${{ secrets.CERT_PASSWORD }}
@@ -60,7 +60,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./golang/          
+          file: ./golang/Dockerfile
           tags: likesistemas/browser:golang
           build-args: |
             CERT_PASSWORD=${{ secrets.CERT_PASSWORD }}
